testing update : web test includes number of calls made to server. changes to yote client server protocoll : methods are optional, and exposed a method to transmit method names of a class back and forth.

--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -18,6 +18,14 @@
 <script>
     var tests = 0;
 var failed = 0;
+var calls_made = 0;
+$.yote.old_message = $.yote.message;
+$.yote.message = function( params ) {
+    calls_made++;
+    return $.yote.old_message( params );
+}
+
+
 function fail( test ) {
     return function(d) {
         ++failed;
@@ -48,6 +56,7 @@ function ok( result, msg ) {
     }
 }
 function wrap_up() {
+    $( '#results' ).append( "<BR>Calls made " + calls_made + "<BR>" );
     if( failed > 0 ) {
         $('#results').append( "Failed " + failed + " tests out of " + tests );
     } else {
