--- a/yote_root/html/yote/index.html
+++ b/yote_root/html/yote/index.html
@@ -10,7 +10,12 @@
     <script src="/yote/js/yote.js"></script>
     <script src="/yote/js/yote.util.js"></script>
     <script src="/yote/js/yote.system.ustil.js"></script>
-<script lang="javascript">
+    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="/css/bootstrap-responsive.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="stylesheet" href="/yote/css/jquery.mobile.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="/yote/css/ui-lightness/jquery-ui-1.8.23.custom.css" type="text/css" media="all" />
+
+    <script lang="javascript">
 
 $().ready( function() { 
     function show_system() {
@@ -27,22 +32,6 @@ $().ready( function() {
     $.yote.util.make_login_box({ target:'#login',
                                  on_in:function() { show_system() },
                                  require_root:1 });
-    $( '#scratch' ).append( '<HR><input type=file id="fileup2" name="file"> <input type=file id="fileup3" name="file"><button type=button id=fileup_b2>Upload</button>' );
-    var tanl_app = $.yote.fetch_app( 'Yote::Test::TestAppNoLogin' );
-    tanl_app.reset();
-    $( '#scratch' ).append( '<BR><img src=' + tanl_app.get_File().Url() + "><BR>" );
-    $( '#fileup_b2' ).click( function() {
-	tanl_app.Upload( { somevar : 'someval', 
-			   somefile : $.yote.upload( '#fileup2' ),
-			   somefile_2 : $.yote.upload( '#fileup3' ),
-			 },
-			 function() {
-			     //refresh the app for now. build in autorefresh later
-			     tanl_app = $.yote.fetch_app( 'Yote::Test::TestAppNoLogin' );
-			     files = tanl_app.get_Files();
-			     $( '#scratch' ).append( '<img src=' + files.get(0).Url() + '> and <img src=' + files.get(1).Url() + '>' );
-			 } );
-    } );
 } );
 </script>
 
@@ -58,6 +47,6 @@ $().ready( function() {
 
  <div id=scratch>
  </div>
-
+    <script src="/js/bootstrap.js"></script>
 </BODY>
 </HTML>
