--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -132,6 +132,8 @@ $().ready(function(){
 	ok( $.yote.token != '', 'login has token', 'token missing from login' );
 	ok( $.cookie('yoken') != '', 'cookie was set', 'cookie was not set' );
 
+        login.reset();
+
 	var token_login = $.yote.fetch_root().token_login( $.yote.token );
 	ok( typeof token_login === 'object', 'has a login with token', 'cannot login with token' );	
 
@@ -159,6 +161,7 @@ $().ready(function(){
 
         var o3 = login.get_obj();
         is( o3.get_Text(), 'bar', 'correct object 1 text directly' );
+
         login.give_obj( o1, pass( "gave object 2" ), fail( "gave object 2" ) );
         is( login.obj_text(), 'foo', 'correct object 2 text' );
         o3 = login.get_obj();
