yote root : rather than have ip address passed in to messages by default, pass the whole environment

--- a/yote_root/html/index.html
+++ b/yote_root/html/index.html
@@ -47,8 +47,13 @@
     <DIV class="container">
       <DIV class="row">
 	<DIV class="span2">
-	  Todo
-	  NEWS
+	  <UL>
+	    <LI></LI>
+	    <LI>Feature Requests</LI>
+	    <LI>To Do</LI>
+	  </UL>
+	  <BR>
+	  news
 	</DIV>
 	<DIV class="span10">
 	  <H2>What is Yote</H2>
