--- a/yote_root/html/yote/index.html
+++ b/yote_root/html/yote/index.html
@@ -24,6 +24,7 @@
 $().ready( function() {
     $.yote.init();
 
+    var root = $.yote.fetch_root();
     var admin_app = $.yote.fetch_app( 'Yote::Util::Admin' );
     var cms = admin_app.get_cms();
 
@@ -40,9 +41,17 @@ $().ready( function() {
     } //make_side_menu
 
 
-    function to_accounts() {
-	$( '#main_panel_div' ).empty().append( "Accounts go here " );
-	
+    function to_accounts( start ) {
+	if( ! start ) { start = 0; }
+	var accts = root.paginate_hash( [ '_handles', 11, start ] ).to_hash();
+	console.log( [ accts, 'ACTS' ] );
+	var tab = $.yote.util.make_table();
+	tab.add_header_row( [ 'Handle', 'Email', 'is superuser' ] );
+	for( var handle in accts ) {
+	    var act = accts[ handle ];
+	    tab.add_row( [ handle, act.get_email(), act.is_root() ] );
+	}
+	$( '#main_panel_div' ).empty().append( "Accounts<BR>" + tab.get_html() );
     }
 
     function to_installed_apps() {
@@ -54,20 +63,27 @@ $().ready( function() {
     }
 
     function to_edit_news() {
-	$( '#main_panel_div' ).empty().append( "<textarea id=edit_news></textarea><BR><button type=button id=edit_news_b>Apply</button>" );
+	var news = cms.content( { path : 'news' } );
+	$( '#News' ).empty().append( news );
+	$( '#main_panel_div' ).empty().append( "<textarea id=edit_news>" + news + "</textarea><BR><button type=button id=edit_news_b>Apply</button>" );
 	$( '#edit_news_b' ).click( function() {
 	    cms.attach_content( { path : 'news', content : $( '#edit_news' ).val() } );
-	    $( '#News' ).empty().append( cms.content( { path : 'news' } ) );
+	    $( '#News' ).empty().append( $( '#edit_news' ).val() );	    
 	} );
     }
 
     function on_login( login ) {
 	make_side_menu( [ 'Accounts', 'Installed Apps', 'Edit News' ] );
+	var news = cms.content( { path : 'news' } );
+	$( '#News' ).empty().append( news );
     } //check_login_state
 
     function not_logged_in() {
 	make_side_menu( [ 'About', 'Documentation', 'Download' ] );
 	$( '#underbar' ).empty().append( '<section id="News"><P>News Goes Here, actually</P></section>' );
+	var news = cms.content( { path : 'news' } );
+	$( '#News' ).empty().append( news );
+	alert( news );
     }
 
     $.yote.util.make_login_bar( { brand_html         : '<a class="brand" href="./index.html">Yote</a>',
