--- a/yote_root/html/yote/index.html
+++ b/yote_root/html/yote/index.html
@@ -32,7 +32,7 @@ $().ready( function() {
 	$( '#side_menu' ).empty();
 	for( var i=0; i < arry.length; i++ ) {
 	    var menu_item = arry[i];
-	    var m_id = "to_" + menu_item.toLowerCase().replace( " ", "_" );
+	    var m_id = "to_" + menu_item.toLowerCase().replace( / /g, "_" );
 	    $( '#side_menu' ).append( '<li class="active"><a href="#" id="' + m_id + '">' + menu_item + "</a></li>" );
 	    (function ( item ) {
 		$( '#' + item ).click( function() { eval( item + '()' ); } );
@@ -72,10 +72,21 @@ $().ready( function() {
 	} );
     }
 
+    function to_edit_to_do() {
+	var news = cms.content( { path : 'to_do' } );
+	$( '#ToDo' ).empty().append( news );
+	$( '#main_panel_div' ).empty().append( "<textarea id=edit_to_do>" + news + "</textarea><BR><button type=button id=edit_to_do_b>Apply</button>" );
+	$( '#edit_to_do_b' ).click( function() {
+	    cms.attach_content( { path : 'to_do', content : $( '#edit_to_do' ).val().replace( /[\r\n]+/g, '<BR>') } );
+	    $( '#ToDo' ).empty().append( $( '#edit_to_do' ).val() );	    
+	} );
+    }
+
     function on_login( login ) {
-	make_side_menu( [ 'Accounts', 'Installed Apps', 'Edit News' ] );
+	make_side_menu( [ 'Accounts', 'Installed Apps', 'Edit News', 'Edit To Do' ] );
 	var news = cms.content( { path : 'news' } );
 	$( '#News' ).empty().append( news );
+	$( '#ToDo' ).empty().append( cms.content( { path : 'to_do' } ) );
     } //check_login_state
 
     function not_logged_in() {
@@ -83,7 +94,7 @@ $().ready( function() {
 	$( '#underbar' ).empty().append( '<section id="News"><P>News Goes Here, actually</P></section>' );
 	var news = cms.content( { path : 'news' } );
 	$( '#News' ).empty().append( news );
-	alert( news );
+	$( '#ToDo' ).empty().append( cms.content( { path : 'to_do' } ) );
     }
 
     $.yote.util.make_login_bar( { brand_html         : '<a class="brand" href="./index.html">Yote</a>',
@@ -125,6 +136,7 @@ $().ready( function() {
 	  </ul>
           <div id="underbar">
               <section id="News"><P>News Goes Here, actually</P></section>
+              <section id="ToDo"><P>ToDo here, actually</P></section>
 	  </div>
 	</div>
 	
