--- a/yote_root/html/install.html
+++ b/yote_root/html/install.html
@@ -25,7 +25,7 @@
     </script>
   </head>
 
-  <BODY style="background-color: #BEB;"	data-spy="scroll" data-target="#navcol" >
+  <BODY data-spy="scroll" data-target="#navcol" >
     <DIV class="navbar navbar-fixed-top navbar-inverse">
       <DIV class="navbar-inner">
 	<A class="brand"><img src="yotelogo.png"></A>
