--- a/yote_root/html/yote/index.html
+++ b/yote_root/html/yote/index.html
@@ -41,19 +41,22 @@ $().ready( function() {
 	}
     } //make_side_menu
 
-
-    function to_accounts( start ) {
-	if( ! start ) { start = 0; }
-	var accts = root.paginate_hash( [ '_handles', 11, start ] ).to_hash();
-	console.log( [ accts, 'ACTS' ] );
-	var tab = $.yote.util.make_table();
-	tab.add_header_row( [ 'Handle', 'Email', 'is superuser' ] );
-	for( var handle in accts ) {
-	    var act = accts[ handle ];
-	    tab.add_row( [ handle, act.get_email(), act.is_root() ] );
-	}
-	$( '#main_panel_div' ).empty().append( "Accounts<BR>" + tab.get_html() );
-    }
+    function to_accounts() {
+	$.yote.util.make_paginatehash_table( {
+	    obj : root,
+	    list_name : '_handles',
+	    size : 10,
+	    col_names : [ 'Handle', 'Email', 'is superuser' ],
+	    title : '<h3>Accounts</h3>',
+	    col_functions : [ 
+		function( k, v ) { return k },
+		function( k, v ) { return v.get_email() },
+		function( k, v ) { return v.is_root() }
+	    ],
+	    attach_point : '#main_panel_div'
+	} );
+	
+    } //to_accounts
 
     function to_installed_apps() {
 	$( '#main_panel_div' ).empty().append( "Installed Apps go here " );
@@ -83,39 +86,20 @@ $().ready( function() {
 	} );
     }
 
-    function to_stats( start_pos ) {
-	var start = start_pos ? start_pos : 0;
-	var count_app = $.yote.fetch_app('Yote::Util::Counter');
-
-	var size = 10;
-
-	var page_data = count_app.paginate_hash( [ '_counts', size + 1, start ] );
-	var tab = $.yote.util.make_table(' BORDER=1 ' );
-	tab.add_header_row( [ 'page', 'hits' ] );
-	var max = page_data.length() < size ? page_data.length() : size;
-	for( var i=0; i < max; i++ ) {
-	    var pair = page_data.get( i );
-	    tab.add_row( [ pair.get(0), pair.get(1) ], null, ['','style="text-align:right"'] );
-	}
-	$( '#main_panel_div' ).empty().append( '<h3>Page Views</h3>' + tab.get_html() ); //good place for pagination
-	if( start > 0 ) {
-	    $( '#main_panel_div' ).append(  '<span id="back" class="btn"><i class="icon-fast-backward"></i></span>' );
-	    $( '#back' ).click(function(){
-		var x = start - size;
-		to_stats( x > 0 ? x : 0 );
-	    });
-	} else {
-	    $( '#main_panel_div' ).append(  '<span class="btn"><i class="icon-fast-backward icon-white"></i></span>' );
-	}
-	if( page_data.length() > max ) {
-	    $( '#main_panel_div' ).append(  '<span id="forward" class="btn"><i class="icon-fast-forward"></i></span>' );
-	    $( '#forward' ).click(function(){
-		to_stats( start + size );
-	    });
-	} else {
-	    $( '#main_panel_div' ).append(  '<span class="btn"><i class="icon-fast-forward icon-white"></i></span>' );
-	}
-    }
+    function to_stats() {
+	$.yote.util.make_paginatehash_table( {
+	    obj : $.yote.fetch_app('Yote::Util::Counter'),
+	    list_name : '_counts',
+	    size : 10,
+	    col_names : [ 'Page', 'Hits' ],
+	    title : '<h3>Page Views</h3>',
+	    col_functions : [ 
+		function( k, v ) { return k },
+		function( k, v ) { return v }
+	    ],
+	    attach_point : '#main_panel_div'
+	} );	
+    } //to_stats
 
     function on_login( login ) {
 	make_side_menu( [ 'Accounts', 'Installed Apps', 'Edit News', 'Edit To Do', 'Stats' ] );
