Integrated MongoDB further, fixing bugs that impacted the web server (mainly switching to non-integer ids).

--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -143,10 +143,10 @@ $().ready(function(){
         ok( typeof scalar !== 'object' && scalar === 'ZEEP', "no login scalar");
         // have a Yote object returned
         step('yote_obj get called on testappneedslogin to succeed');
-
+    
         var obj = login.get_yote_obj();
         if( typeof obj !== 'object' ) {
-            fail( "yote_obj not returned" );
+            fail( "yote_obj not returned" )();
             return;      
         }
 
