--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -242,9 +242,9 @@ $().ready(function(){
         $.yote._dump_cache();
         is( $.yote._cache_size(), 0, "cache now empty" );
         var login = $.yote.fetch_app( 'Yote::Test::TestAppNeedsLogin' );
-        is( $.yote._cache_size(), 3, "cache with loginapp and root and obj in loginapp" );
+        is( $.yote._cache_size(), 4, "cache with loginapp and root and obj in loginapp ( root gets two entries )" );
         login.load_direct_descendents();
-        is( $.yote._cache_size(), 5, "cache with loginapp, root and loginapps threefields (made,yoteobj,obj) " );
+        is( $.yote._cache_size(), 6, "cache with loginapp, root and loginapps threefields (made,yoteobj,obj) " );
 
         wrap_up();
     }
