--- a/yote_root/html/samples.html
+++ b/yote_root/html/samples.html
@@ -32,6 +32,7 @@
 	<UL class="nav">
 	  <LI><a href="index.html">About</a></LI>
 	  <LI><A href="install.html">Install</A></LI>
+<!--	  <LI><A href="docs.html">Documentation</A></LI> -->
 	  <LI class="active"><A href="samples.html">Samples</A></LI>
 <!--	  <LI><A href="program.html">Program</A></LI> -->
 	</UL>      
