--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -242,7 +242,12 @@ $().ready(function(){
         is( $.yote._cache_size(), 0, "cache now empty" );
         var login = $.yote.fetch_app( 'Yote::Test::TestAppNeedsLogin' );
 	console.log( [ 'YOTE CACHE', $.yote.objs ] );
-        is( $.yote._cache_size(), 4, "cache with loginapp and root and obj in loginapp ( root gets two entries )" );
+        is( $.yote._cache_size(), 3, "cache with loginapp and root and obj in loginapp" );
+
+	var hello_app = $.yote.fetch_app( 'Yote::Test::Hello' );
+	hello_app.hello();
+	is( hello_app.get_my_hash().get( 'store' ).get( 'AnObject' ).get_flavor(), 'blueberry', "chained objects passed correctly" );
+	
 
         wrap_up();
     }
