re-added _load function to base class

--- a/yote_root/html/quickstart.html
+++ b/yote_root/html/quickstart.html
@@ -230,7 +230,7 @@ sub hello {\n\
 		// can move backwards
 		buf += '<a id="back" href="#">BACK</a>';
 	    }
-	    if( lesson_idx < lessons.length ) {
+	    if( lesson_idx < (lessons.length-1) ) {
 		// can move forwards
 		buf += '<a id="ahead" href="#" style="float:right">AHEAD</a>';
 	    }
